--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
